--- a/srfi-136.html
+++ b/srfi-136.html
@@ -15,6 +15,15 @@ Extensible record types
 
 <p>Marc Nieper-Wi&szlig;kirchen</p>
 
+<H1>Status</H1>
+
+<p>This SRFI is currently in <em>draft</em> status. Here is <a href="http://srfi.schemers.org/srfi-process.html">an explanation</a> of each status that a SRFI can hold.  To provide input on this SRFI, please send email to <code><a href="mailto:srfi+minus+136+at+srfi+dotschemers+dot+org">srfi-136@<span class="antispam">nospam</span>srfi.schemers.org</a></code>.  To subscribe to the list, follow <a href="http://srfi.schemers.org/srfi-list-subscribe.html">these instructions</a>.  You can access previous messages via the mailing list <a href="http://srfi-email.schemers.org/srfi-136">archive</a>.</p>
+<ul>
+  <li>Received: 2016/6/23</li>
+  <li>60-day deadline: 2016/8/22</li>
+  <li>Draft #1 published: 2016/6/22</li>
+</ul>
+
 <h1>Abstract</h1>
 
 <p>
