Fix link to implementation.

--- a/srfi-136.html
+++ b/srfi-136.html
@@ -339,7 +339,7 @@ The sample implementation is given as an R7RS library, which only relies on the 
 exported by <code>(scheme base)</code>. In particular, it is implemented using only
 syntax-rules macros and does not rely on more sophisticated/less beautiful macro facilities.
 
-<a href="nieper/records.sld">Source for the reference implementation.</a>
+<a href="srfi/136.sld">Source for the reference implementation.</a>
 
 <h1>Acknowledgements</h1>
 
