Publish second draft.

--- a/srfi-136.html
+++ b/srfi-136.html
@@ -22,6 +22,7 @@ Extensible record types
   <li>Received: 2016/6/23</li>
   <li>60-day deadline: 2016/8/23</li>
   <li>Draft #1 published: 2016/6/24</li>
+  <li>Draft #2 published: 2016/7/4</li>
 </ul>
 
 <h1>Abstract</h1>
