--- a/srfi-136.html
+++ b/srfi-136.html
@@ -31,6 +31,7 @@ list <a href="http://srfi-email.schemers.org/srfi-136">archive</a>.</p>
   <li>60-day deadline: 2016/8/23</li>
   <li>Draft #1 published: 2016/6/24</li>
   <li>Draft #2 published: 2016/7/4</li>
+  <li>Draft #3 published: 2016/10/24</li>
 </ul>
 
 <h1>Abstract</h1>
