Corrected the bug in the sample implementation reported by Jim Rees in http://srfi-email.schemers.org/srfi-136/msg/4736699

--- a/srfi-136.html
+++ b/srfi-136.html
@@ -270,8 +270,9 @@ Then the macro use <code>(&lt;type name&gt;
 (If the record-type does not have a parent, <code>&lt;parent&gt;</code> is <code>#f</code>.)
 </p>
 Furthermore, the macro use <code>(&lt;type name&gt;)</code>
-macro-expands into an object that serves as a runtime record-type
-descriptor for the procedural interface (see below).
+macro-expands into an expression that evaluates to an object that
+serves as a runtime record-type descriptor for the procedural
+interface (see below).
 
 <p>
   <i>Rationale: This allows the introspection of the record type at
