Fix spelling of John Cowan's name.

--- a/srfi-136.html
+++ b/srfi-136.html
@@ -488,7 +488,7 @@ was very helpful in bringing this SRFI into final shape.
 
 <p>
 Finally, the whole process of bringing this SRFI into life wouldn't
-have happened without the encouragement by John Cowen and the support
+have happened without the encouragement by John Cowan and the support
 of Arthur A. Gleckler.
 </p>
 
