Fix spelling error.

--- a/srfi-136.html
+++ b/srfi-136.html
@@ -97,7 +97,7 @@ the record type has to be defined and used.
   defined here is also possible. The guiding principle of this
   proposal, however, is just to provide the primitives on which more
   sophisticated systems (like an object system with single
-  inheritence) can be built.
+  inheritance) can be built.
 </p>
 
 <p>
