--- a/srfi-136.html
+++ b/srfi-136.html
@@ -18,7 +18,7 @@ Extensible record types
 
 <H1>Status</H1>
 
-<p>This SRFI is currently in <em>draft</em> status. Here
+<p>This SRFI is currently in <em>final</em> status. Here
 is <a href="http://srfi.schemers.org/srfi-process.html">an
 explanation</a> of each status that a SRFI can hold.  To provide input
 on this SRFI, please send email
@@ -35,6 +35,7 @@ list <a href="http://srfi-email.schemers.org/srfi-136">archive</a>.</p>
   <li>Draft #3 published: 2016/10/24</li>
   <li>Draft #4 published: 2016/12/8</li>
   <li>Draft #5 published: 2016/12/15</li>
+  <li>Finalized: 2016/12/25</li>
 </ul>
 
 <h1>Abstract</h1>
