Add charset, stylesheet, and viewport as required.

--- a/srfi-136.html
+++ b/srfi-136.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <title>SRFI 136: Extensible record types</title>
-    <link rel="stylesheet" href="http://srfi.schemers.org/srfi.css" type="text/css" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="/srfi.css" type="text/css" />
   </head>
 
   <body>
