--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <title>Extensible record types</title>
     <link href="/admin.css" rel="stylesheet">
+    <link href="/list.css" rel="stylesheet">
     <link href="/favicon.png" rel="icon" sizes="192x192" type="image/png">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
 
@@ -18,7 +19,7 @@
       <li><a href="http://srfi-email.schemers.org/srfi-136/">Discussion Archive</a></li>
       <li><a href="https://github.com/scheme-requests-for-implementation/srfi-136">Git repo (on Github)</a></li>
       <li>
-        <a href="mailto:srfi-136@srfi.schemers.org"><code>srfi-136@<span class="antispam">nospam</span>srfi.schemers.org</code></a> (subscribers only)</li>
+        <a href="mailto:srfi-136@srfi.schemers.org">srfi-136@<span class="antispam">nospam</span>srfi.schemers.org (subscribers only)</a></li>
       <li>
         <form method="POST" action="https://www.simplelists.com/subscribe.php">
           <div class="title">Subscribe to srfi-136 mailing list</div>
