--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <h1>SRFI 136: Extensible record types</h1>
     <p class="authors">by Marc Nieper-Wißkirchen</p>
-    <p class="status">status: <em>final</em></p>
+    <p class="status">status: <em>final</em> (2016/12/25)</p>
 
     <ul>
       <li><a href="srfi-136.html">The SRFI Document</a></li>
