--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
     <ul>
       <li><a href="srfi-136.html">The SRFI Document</a></li>
-      <li><a href="http://srfi-email.schemers.org/srfi-136/">Discussion Archive</a></li>
+      <li><a href="https://srfi-email.schemers.org/srfi-136/">Discussion Archive</a></li>
       <li><a href="https://github.com/scheme-requests-for-implementation/srfi-136">Git repo (on Github)</a></li>
       <li>
-        <a href="mailto:srfi-136@srfi.schemers.org">srfi-136@<span class="antispam">nospam</span>srfi.schemers.org (subscribers only)</a></li>
+        <a href="mailto:srfi-136@srfi.schemers.org">srfi-136@<span class="antispam">nospam</span>srfi.schemers.org</a> (subscribers only)</li>
       <li>
         <form method="POST" action="https://www.simplelists.com/subscribe.php">
           <div class="title">Subscribe to srfi-136 mailing list</div>
