--- a/index.html
+++ b/index.html
@@ -2,11 +2,20 @@
 <html>
   <head>
     <title>Extensible record types</title>
-    <link href="/admin.css" rel="stylesheet">
-    <link href="/list.css" rel="stylesheet">
-    <link href="/favicon.png" rel="icon" sizes="192x192" type="image/png">
+    <link href="../srfi-common/admin.css" rel="stylesheet">
+    <link href="../srfi-common/list.css" rel="stylesheet">
+    <link href="../srfi-common/favicon.png" rel="icon" sizes="192x192" type="image/png">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script type="text/x-mathjax-config">
+     MathJax.Hub.Config({
+       tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}
+     });
+    </script>
+    <script crossorigin="anonymous" integrity=
+            "sha384-Ra6zh6uYMmH5ydwCqqMoykyf1T/+ZcnOQfFPhDrp2kI4OIxadnhsvvA2vv9A7xYv" src=
+            "https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"
+            type="text/javascript"></script>
   </head>
 
   <body>
@@ -62,4 +71,14 @@
                  value="unsubscribe" >
           <input name="list"
                  type="hidden"
-                 value="srfi-136@srfi.schemers.org" ></form></li></ul></body></html>
+                 value="srfi-136@srfi.schemers.org"></form></li></ul>
+    <h2>Abstract</h2>      <p>SRFI 9 and the compatible R7RS-small provide
+      Scheme with record types. The basic problem that is solved by these
+      record types is that they allow the user to introduce new types, disjoint
+      from all existing types. The record type system described in this
+      document is a conservative extension to SRFI 9 and R7RS record types (in
+      other words, the keyword <code>define-record-type</code> defined in this
+      specification can serve as the equally named keyword from SRFI 9 and R7RS
+      and can thus be safely exported from <code>(srfi 9)</code> and
+      <code>(scheme base)</code>) that is intended to solve another fundamental
+      problem, namely the introduction of subtypes.</body></html>
