Link to a ".tgz" file containing the whole repo.

--- a/srfi-136.html
+++ b/srfi-136.html
@@ -451,7 +451,7 @@ exported by <code>(scheme base)</code>. In particular, it is implemented using o
 syntax-rules macros and does not rely on more sophisticated/less beautiful macro facilities.
 </p>
 
-<a href="srfi/136.sld">Source for the sample implementation.</a>
+<a href="https://srfi.schemers.org/srfi-136/srfi-136.tgz">Source for the sample implementation.</a>
 
 <p>
 The sample implementation is accompanied with an implementation of SRFI 131 on top of the syntax
@@ -474,7 +474,7 @@ with a SRFI 131 parent behaves as if the parent's constructor spec was given by 
   implementation for SRFI 136 builds upon that SRFI 137.
 </p>
 
-<a href="srfi/131.sld">Source for the compatible SRFI 131 implementation.</a>
+<a href="https://srfi.schemers.org/srfi-131/srfi-131.tgz">Source for the compatible SRFI 131 implementation.</a>
 
 <h1>Acknowledgements</h1>
 
