--- a/srfi-136.html
+++ b/srfi-136.html
@@ -156,7 +156,7 @@ This SRFI extends 7.1.6 of R7RS-small as follows:
  &lt;definition&gt;           
    -&gt; &lt;record-type definition&gt;
  
- &lt;record type definition&gt;
+ &lt;record-type definition&gt;
    -&gt; (define-record-type &lt;type spec&gt;
         &lt;constructor spec&gt;
         &lt;predicate spec&gt;
