--- a/srfi-136.html
+++ b/srfi-136.html
@@ -30,14 +30,14 @@ follow <a href="http://srfi.schemers.org/srfi-list-subscribe.html">these
 instructions</a>.  You can access previous messages via the mailing
 list <a href="http://srfi-email.schemers.org/srfi-136">archive</a>.</p>
 <ul>
-  <li>Received: 2016/6/23</li>
-  <li>60-day deadline: 2016/8/23</li>
-  <li>Draft #1 published: 2016/6/24</li>
-  <li>Draft #2 published: 2016/7/4</li>
-  <li>Draft #3 published: 2016/10/24</li>
-  <li>Draft #4 published: 2016/12/8</li>
-  <li>Draft #5 published: 2016/12/15</li>
-  <li>Finalized: 2016/12/25</li>
+  <li>Received: 2016-06-23</li>
+  <li>60-day deadline: 2016-08-23</li>
+  <li>Draft #1 published: 2016-06-24</li>
+  <li>Draft #2 published: 2016-07-04</li>
+  <li>Draft #3 published: 2016-10-24</li>
+  <li>Draft #4 published: 2016-12-08</li>
+  <li>Draft #5 published: 2016-12-15</li>
+  <li>Finalized: 2016-12-25</li>
 </ul>
 
 <h1>Abstract</h1>
