--- a/srfi-136.html
+++ b/srfi-136.html
@@ -21,14 +21,14 @@ Extensible record types
 <H1>Status</H1>
 
 <p>This SRFI is currently in <em>final</em> status. Here
-is <a href="http://srfi.schemers.org/srfi-process.html">an
+is <a href="https://srfi.schemers.org/srfi-process.html">an
 explanation</a> of each status that a SRFI can hold.  To provide input
 on this SRFI, please send email
 to <code><a href="mailto:srfi+minus+136+at+srfi+dotschemers+dot+org">srfi-136@<span class="antispam">nospam</span>srfi.schemers.org</a></code>.
 To subscribe to the list,
-follow <a href="http://srfi.schemers.org/srfi-list-subscribe.html">these
+follow <a href="https://srfi.schemers.org/srfi-list-subscribe.html">these
 instructions</a>.  You can access previous messages via the mailing
-list <a href="http://srfi-email.schemers.org/srfi-136">archive</a>.</p>
+list <a href="https://srfi-email.schemers.org/srfi-136">archive</a>.</p>
 <ul>
   <li>Received: 2016-06-23</li>
   <li>60-day deadline: 2016-08-23</li>
