--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <p class="authors">by Marc Nieper-Wißkirchen</p>
     <p class="based-on"></p>
     <p class="status">status: <em>final</em> (2016-12-25)</p>
+    <p class="keywords">keywords: [[https://srfi.schemers.org/?keywords=data-structure][Data Structure]]</p>
 
     <ul class="info">
       <li><a href="srfi-136.html">The SRFI Document</a></li>
